fix: v6.4.0 — cache busting for mobile, version bump

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
 
             <div class="menu-footer">
-                VER 6.3.0 • UID: <span id="menuUID">---</span>
+                VER 6.4.0 • UID: <span id="menuUID">---</span>
             </div>
         </div>
 
@@ -430,13 +430,13 @@
     </div>
 
     <!-- External JS modules -->
-    <script src="js/audio.js"></script>
-    <script src="js/shop.js"></script>
-    <script src="js/energy.js"></script>
-    <script src="js/firebase-config.js"></script>
-    <script src="js/leaderboard.js"></script>
-    <script src="js/ads.js"></script>
-    <script src="js/paypal-shop.js"></script>
+    <script src="js/audio.js?v=6.4.0"></script>
+    <script src="js/shop.js?v=6.4.0"></script>
+    <script src="js/energy.js?v=6.4.0"></script>
+    <script src="js/firebase-config.js?v=6.4.0"></script>
+    <script src="js/leaderboard.js?v=6.4.0"></script>
+    <script src="js/ads.js?v=6.4.0"></script>
+    <script src="js/paypal-shop.js?v=6.4.0"></script>
 
     <!-- ═══ Game Engine + UI Controller ═══ -->
     <script>
